[gd_scene load_steps=13 format=4 uid="uid://bnyic78x5wjwh"]

[ext_resource type="PackedScene" uid="uid://cfylthcgb3nr2" path="res://Characters/knight_(free).tscn" id="1_b63sn"]
[ext_resource type="Script" uid="uid://dekycnyhvcfwf" path="res://Characters/beginning.gd" id="1_yhh2i"]
[ext_resource type="PackedScene" uid="uid://b51sor208gitu" path="res://Characters/tileset.tscn" id="2_yhh2i"]
[ext_resource type="Script" uid="uid://drvargyxqb7ns" path="res://Characters/npc.gd" id="4_uw58u"]
[ext_resource type="Texture2D" uid="uid://c3nw3oucql2aa" path="res://Assets/simple_knight_v2.svg" id="4_wg1ku"]
[ext_resource type="PackedScene" uid="uid://cdsg4jujduevn" path="res://Characters/chest.tscn" id="6_08cg0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhh2i"]
size = Vector2(208, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_v38pm"]
atlas = ExtResource("4_wg1ku")
region = Rect2(24, 137, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_isoon"]
atlas = ExtResource("4_wg1ku")
region = Rect2(59, 67, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v1c2"]
atlas = ExtResource("4_wg1ku")
region = Rect2(24, 67, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx634"]
atlas = ExtResource("4_wg1ku")
region = Rect2(94, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_uw58u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v38pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isoon")
}],
"loop": true,
"name": &"bouncee",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v1c2")
}],
"loop": false,
"name": &"look",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx634")
}],
"loop": true,
"name": &"still",
"speed": 5.0
}]

[node name="beginning" type="Node2D"]
script = ExtResource("1_yhh2i")

[node name="Knight (Free)" parent="." instance=ExtResource("1_b63sn")]
z_index = 20
position = Vector2(-232, 16)
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Knight (Free)"]
visible = false
z_index = 100
offset_left = 12.0
offset_top = -39.0
offset_right = 76.0
offset_bottom = -16.0
text = "?"

[node name="Structure" parent="." instance=ExtResource("2_yhh2i")]
tile_map_data = PackedByteArray("AAABAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAD3/wEAAAAAAAAAAAD4/wEAAAAAAAAAAAD5/wEAAAAAAAAAAAD6/wEAAAAAAAAAAAD7/wEAAAAAAAAAAAD8/wEAAAAAAAAAAAD9/wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD//wEAAAABAAAAAAACAAEAAAAAAAAAAAADAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAIAAEAAAABAAAAAAAIAAIAAAAAAAAAAAAHAAIAAAAAAAAAAAAGAAIAAAAAAAAAAAADAAIAAAABAAAAAAACAAIAAAAAAAAAAAABAAIAAAAAAAAAAAAAAAIAAAAAAAAAAAD//wIAAAAAAAAAAAD+/wIAAAAAAAAAAAD9/wIAAAAAAAAAAAD8/wIAAAAAAAAAAAD7/wIAAAAAAAAAAAD6/wIAAAAAAAAAAAD5/wIAAAAAAAAAAAD4/wIAAAABAAAAAAD3/wIAAAAAAAAAAAAIAAMAAAAAAAAAAAAHAAMAAAAAAAAAAAAGAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAADAAMAAAAAAAAAAAACAAMAAAAAAAAAAAABAAMAAAAAAAAAAAAAAAMAAAAAAAAAAAD//wMAAAAAAAAAAAD+/wMAAAAAAAAAAAD9/wMAAAAAAAAAAAD8/wMAAAAAAAAAAAD7/wMAAAAAAAAAAAD6/wMAAAAAAAAAAAD5/wMAAAAAAAAAAAD4/wMAAAAAAAAAAAD3/wMAAAAAAAAAAADy/wEAAAAAAAAAAADz/wEAAAAAAAAAAAD0/wEAAAAAAAAAAAD1/wEAAAABAAAAAAD2/wEAAAAAAAAAAAD2/wIAAAAAAAAAAAD2/wMAAAAAAAAAAAD1/wMAAAAAAAAAAAD0/wMAAAAAAAAAAADz/wMAAAAAAAAAAADy/wMAAAAAAAAAAADy/wIAAAAAAAAAAADz/wIAAAAAAAAAAAD0/wIAAAAAAAAAAAD1/wIAAAAAAAAAAAAJAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAALAAEAAAAAAAAAAAAMAAEAAAAAAAAAAAANAAEAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAANAAMAAAAAAAAAAAAMAAMAAAAAAAAAAAALAAMAAAAAAAAAAAAKAAMAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAIAAAAAAAAAAAAKAAIAAAAAAAAAAAALAAIAAAAAAAAAAAAMAAIAAAAAAAAAAAANAAIAAAAAAAAAAAAPAAEAAAAAAAAAAAAQAAEAAAAAAAAAAAARAAEAAAAAAAAAAAASAAEAAAAAAAAAAAATAAEAAAABAAAAAAAUAAEAAAABAAAAAAAVAAEAAAABAAAAAAAWAAEAAAABAAAAAAAXAAEAAAAAAAAAAAAYAAEAAAAAAAAAAAAZAAEAAAAAAAAAAAAaAAEAAAAAAAAAAAAaAAIAAAAAAAAAAAAaAAMAAAAAAAAAAAAZAAMAAAAAAAAAAAAYAAMAAAAAAAAAAAAXAAMAAAAAAAAAAAAWAAMAAAAAAAAAAAAVAAMAAAAAAAAAAAAUAAMAAAAAAAAAAAATAAMAAAAAAAAAAAASAAMAAAAAAAAAAAARAAMAAAAAAAAAAAAQAAMAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAIAAAAAAAAAAAAQAAIAAAAAAAAAAAARAAIAAAAAAAAAAAASAAIAAAAAAAAAAAATAAIAAAAAAAAAAAAUAAIAAAABAAAAAAAVAAIAAAAAAAAAAAAWAAIAAAAAAAAAAAAXAAIAAAAAAAAAAAAYAAIAAAAAAAAAAAAZAAIAAAAAAAAAAAD2/wAAAAAAAAAAAAD2////AAAAAAAAAAD2//7/AAAAAAAAAAD2//3/AAAAAAAAAAD2//z/AAAAAAAAAAD2//v/AAAAAAAAAAD2//r/AAAAAAAAAAD2//n/AAAAAAAAAAAXAPz/AAACAAAAAAAWAP3/AAACAAIAAAAVAP//AAACAAIAAAAVAP7/AAACAAAAAAAWAPz/AAACAAAAAAAbAAEAAAAAAAAAAAAbAAAAAAAAAAAAAAAbAP//AAAAAAAAAAAbAP7/AAAAAAAAAAAbAP3/AAAAAAAAAAAbAPz/AAAAAAAAAAAbAAIAAAAAAAAAAAAbAAMAAAAAAAAAAAAVAAAAAAABAAAAAAAWAAAAAAAAAAAAAAAXAAAAAAAAAAAAAAAXAP//AAAAAAAAAAAWAP//AAABAAAAAAAWAP7/AAABAAAAAAAXAP7/AAAAAAAAAAAXAP3/AAABAAAAAAA=")

[node name="Background" parent="Structure" index="2"]
tile_map_data = PackedByteArray("AAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAOAP7/AAAAAAAAAAAOAP3/AAAAAAAAAAAOAPz/AAAAAAAAAADy//7/AAAAAAAAAADy////AAAAAAAAAADy/wAAAAAAAAAAAADz/wAAAAAAAAAAAADz////AAAAAAAAAADz//7/AAAAAAAAAAD0//7/AAAAAAAAAAD0////AAAAAAAAAAD0/wAAAAAAAAAAAAD1/wAAAAAAAAAAAAD1////AAAAAAAAAAD1//7/AAAAAAAAAAD2////AAACAAEAAAD2/wAAAAACAAIAAAD3/wAAAAADAAIAAAD3////AAADAAEAAAD3//7/AAADAAEAAAD4//7/AAABAAAAAAD4////AAAAAAAAAAD4/wAAAAAAAAAAAAD5/wAAAAAAAAAAAAD5////AAAAAAAAAAD5//7/AAABAAAAAAD6//7/AAABAAAAAAD6////AAAAAAAAAAD6/wAAAAAAAAAAAAD7/wAAAAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD9////AAAAAAAAAAD9//7/AAAAAAAAAAD9//3/AAABAAAAAAD+//z/AAAAAAAAAAD+//3/AAAAAAAAAAD+//7/AAAAAAAAAAD+////AAAAAAAAAAD+/wAAAAAAAAAAAAD//wAAAAAAAAAAAAD/////AAAAAAAAAAD///7/AAAAAAAAAAD///3/AAABAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAABAP//AAAAAAAAAAABAP7/AAAAAAAAAAABAP3/AAAAAAAAAAABAPz/AAAAAAAAAAACAPz/AAAAAAAAAAACAP3/AAAAAAAAAAACAP7/AAAAAAAAAAACAP//AAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAACAAIAAAADAP//AAACAAEAAAADAP7/AAACAAEAAAADAP3/AAACAAAAAAADAPz/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAP3/AAADAAAAAAAEAP7/AAADAAEAAAAEAP//AAADAAEAAAAEAAAAAAADAAIAAAAFAAAAAAAAAAAAAAAFAP//AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP3/AAAAAAAAAAAFAPz/AAAAAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAAHAP//AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP3/AAAAAAAAAAAIAP3/AAAAAAAAAAAIAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAJAAAAAAAAAAAAAAAJAP//AAAAAAAAAAAJAP7/AAAAAAAAAAAJAP3/AAAAAAAAAAAKAP3/AAAAAAAAAAAKAP7/AAAAAAAAAAAKAP//AAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAALAP//AAAAAAAAAAALAP7/AAAAAAAAAAALAP3/AAAAAAAAAAAMAPz/AAAAAAAAAAAMAP3/AAAAAAAAAAAMAP7/AAAAAAAAAAAMAP//AAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAANAP//AAAAAAAAAAANAP7/AAAAAAAAAAANAP3/AAAAAAAAAAANAPz/AAAAAAAAAAANAPv/AAAAAAAAAAAOAP//AAAAAAAAAAAOAAAAAAAAAAAAAAAFAPj/AAAAAAAAAAAGAPj/AAAAAAAAAAAHAPj/AAAAAAAAAAAIAPj/AAAAAAAAAAAJAPn/AAAAAAAAAAAKAPn/AAAAAAAAAAALAPn/AAAAAAAAAAAMAPr/AAAAAAAAAAAMAPv/AAAAAAAAAAALAPv/AAAAAAAAAAALAPz/AAAAAAAAAAAKAPz/AAAAAAAAAAAJAPz/AAAAAAAAAAAIAPz/AAAAAAAAAAAHAPz/AAAAAAAAAAAGAPz/AAAAAAAAAAAFAPv/AAAAAAAAAAAEAPv/AAAAAAAAAAADAPv/AAAAAAAAAAACAPv/AAAAAAAAAAAFAPn/AAAAAAAAAAAFAPr/AAAAAAAAAAAEAPr/AAAAAAAAAAAGAPn/AAAAAAAAAAAHAPn/AAAAAAAAAAAHAPr/AAAAAAAAAAAHAPv/AAAAAAAAAAAGAPv/AAAAAAAAAAAGAPr/AAAAAAAAAAAIAPn/AAAAAAAAAAAIAPr/AAAAAAAAAAAJAPr/AAAAAAAAAAAJAPv/AAAAAAAAAAAKAPv/AAAAAAAAAAAKAPr/AAAAAAAAAAAIAPv/AAAAAAAAAAALAPr/AAAAAAAAAAAJAPj/AAAAAAAAAAAKAPj/AAAAAAAAAAALAPj/AAAAAAAAAAAMAPj/AAAAAAAAAAANAPj/AAAAAAAAAAAOAPj/AAAAAAAAAAAOAPn/AAAAAAAAAAAOAPr/AAAAAAAAAAANAPr/AAAAAAAAAAANAPn/AAAAAAAAAAAMAPn/AAAAAAAAAAAOAPv/AAAAAAAAAAD3//3/AAADAAEAAAD2//3/AAACAAEAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAARAAAAAAAAAAAAAAASAAAAAAAAAAAAAAATAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAVAP//AAAAAAAAAAAUAP//AAAAAAAAAAATAP//AAAAAAAAAAASAP//AAAAAAAAAAARAP//AAAAAAAAAAAQAP//AAAAAAAAAAAPAP//AAAAAAAAAAAPAP7/AAAAAAAAAAAPAPz/AAAAAAAAAAAPAPv/AAAAAAAAAAAPAPr/AAAAAAAAAAAPAPn/AAAAAAAAAAAPAPj/AAAAAAAAAAAQAPj/AAAAAAAAAAARAPj/AAAAAAAAAAASAPj/AAAAAAAAAAATAPj/AAAAAAAAAAAUAPj/AAAAAAAAAAAVAPj/AAAAAAAAAAAWAPj/AAAAAAAAAAAXAPj/AAAAAAAAAAAYAPj/AAAAAAAAAAAZAPj/AAAAAAAAAAAaAPj/AAAAAAAAAAAaAPn/AAAAAAAAAAAaAPr/AAAAAAAAAAAaAPv/AAAAAAAAAAAVAP7/AAAAAAAAAAAUAP7/AAAAAAAAAAATAP7/AAAAAAAAAAASAP7/AAAAAAAAAAARAP7/AAAAAAAAAAAQAP7/AAAAAAAAAAAPAP3/AAAAAAAAAAAVAPr/AAAAAAAAAAAVAPn/AAAAAAAAAAAUAPn/AAAAAAAAAAATAPn/AAAAAAAAAAASAPn/AAAAAAAAAAARAPn/AAAAAAAAAAAQAPn/AAAAAAAAAAAQAPr/AAAAAAAAAAAQAPv/AAAAAAAAAAAQAPz/AAAAAAAAAAAQAP3/AAAAAAAAAAARAP3/AAAAAAAAAAARAPz/AAAAAAAAAAARAPv/AAAAAAAAAAARAPr/AAAAAAAAAAASAPr/AAAAAAAAAAASAPv/AAAAAAAAAAASAPz/AAAAAAAAAAASAP3/AAAAAAAAAAATAP3/AAAAAAAAAAATAPz/AAAAAAAAAAATAPv/AAAAAAAAAAATAPr/AAAAAAAAAAAUAPr/AAAAAAAAAAAUAPv/AAAAAAAAAAAUAPz/AAAAAAAAAAAUAP3/AAAAAAAAAAAVAP3/AAAAAAAAAAAVAPz/AAAAAAAAAAAVAPv/AAAAAAAAAAAWAPv/AAAAAAAAAAAWAPr/AAAAAAAAAAAWAPn/AAAAAAAAAAAXAPn/AAAAAAAAAAAXAPr/AAAAAAAAAAAXAPv/AAAAAAAAAAAXAPz/AAAAAAAAAAAWAPz/AAAAAAAAAAAWAP3/AAAAAAAAAAAYAPz/AAAAAAAAAAAYAPv/AAAAAAAAAAAYAPr/AAAAAAAAAAAYAPn/AAAAAAAAAAAZAPn/AAAAAAAAAAAZAPr/AAAAAAAAAAAZAPv/AAAAAAAAAAD3//z/AAADAAEAAAD3//v/AAADAAEAAAD3//r/AAADAAAAAAD2//z/AAACAAEAAAD2//v/AAACAAEAAAD2//r/AAACAAAAAAD2//7/AAACAAEAAAAZAPz/AAAAAAAAAAAaAPz/AAAAAAAAAAAaAP3/AAAAAAAAAAAaAP7/AAAAAAAAAAAaAP//AAAAAAAAAAAaAAAAAAAAAAAAAAAZAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAYAP//AAAAAAAAAAAZAP//AAAAAAAAAAAZAP7/AAAAAAAAAAAZAP3/AAAAAAAAAAAYAP7/AAAAAAAAAAAYAP3/AAAAAAAAAAA=")
metadata/_edit_lock_ = true

[node name="Further Background" parent="Structure" index="3"]
tile_map_data = PackedByteArray("AAD2//3/AAAAAAAAAAD3//3/AAAAAAAAAAD3//7/AAAAAAAAAAD2//7/AAAAAAAAAAD2////AAAAAAAAAAD3////AAAAAAAAAAD2/wAAAAAAAAAAAAD3/wAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAP//AAAAAAAAAAADAP//AAAAAAAAAAADAP7/AAAAAAAAAAAEAP7/AAAAAAAAAAAEAP3/AAAAAAAAAAADAP3/AAAAAAAAAAA=")

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 100
zoom = Vector2(2, 2)
limit_left = -280
limit_bottom = 100

[node name="Camera2D2" type="Camera2D" parent="."]
z_index = 100
position = Vector2(474, 0)
zoom = Vector2(2, 2)
limit_bottom = 100

[node name="triggerScene" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggerScene"]
z_index = 100
position = Vector2(680, -4)
shape = SubResource("RectangleShape2D_yhh2i")

[node name="sky" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.411765)
offset_left = -360.0
offset_top = -272.0
offset_right = 232.0
offset_bottom = 56.0
color = Color(1, 0.54902, 0, 1)
metadata/_edit_lock_ = true

[node name="NPC" type="CharacterBody2D" parent="."]
script = ExtResource("4_uw58u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="NPC"]
modulate = Color(0, 1, 1, 1)
z_index = 98
position = Vector2(632, 25)
rotation = 0.760964
skew = 0.507891
sprite_frames = SubResource("SpriteFrames_uw58u")
animation = &"still"
autoplay = "still"

[node name="Chest" parent="." instance=ExtResource("6_08cg0")]
z_index = 90
position = Vector2(656, 16)

[connection signal="move_npc_left" from="." to="NPC" method="move_left"]
[connection signal="move_npc_right" from="." to="NPC" method="move_right"]
[connection signal="stop_player" from="." to="Knight (Free)" method="_on_beginning_stop_player"]
[connection signal="switch_camera" from="Knight (Free)" to="." method="_on_knight_free_switch_camera"]
[connection signal="body_entered" from="triggerScene" to="." method="_on_trigger_scene_body_entered"]

[editable path="Structure"]
